--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     let wikiIndex = {};
 
     // Load the article index from an external JSON file
-    fetch('articles/articles.json')
+    fetch('articles.json')
       .then(response => response.json())
       .then(data => {
         wikiIndex = data;
