--- a/index.html
+++ b/index.html
@@ -4,160 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SimpleWiki</title>
-  <style>
-    /* Global Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    body {
-      display: flex;
-      min-height: 100vh;
-      background-color: #f6f6f6;
-    }
-    /* Sidebar */
-    .sidebar {
-      width: 240px;
-      background-color: #f2f2f2;
-      padding: 20px;
-      border-right: 1px solid #ddd;
-    }
-    .wiki-logo {
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      color: #333;
-      text-decoration: none;
-      display: block;
-    }
-    .sidebar-nav {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .sidebar-nav a {
-      color: #3366cc;
-      text-decoration: none;
-      padding: 8px;
-      border-radius: 3px;
-    }
-    .sidebar-nav a:hover {
-      background-color: #e6e6e6;
-    }
-    /* Main Content */
-    .main-content {
-      flex: 1;
-      padding: 20px;
-      max-width: 1024px;
-      margin: 0 auto;
-    }
-    .search-container {
-      display: flex;
-      margin-bottom: 20px;
-    }
-    .search-input {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 3px 0 0 3px;
-      outline: none;
-    }
-    .search-button {
-      padding: 10px 15px;
-      background-color: #3366cc;
-      color: white;
-      border: none;
-      border-radius: 0 3px 3px 0;
-      cursor: pointer;
-    }
-    .search-button:hover {
-      background-color: #254e99;
-    }
-    .article {
-      background-color: white;
-      padding: 20px;
-      border-radius: 3px;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    }
-    .article-title {
-      font-size: 28px;
-      margin-bottom: 15px;
-      padding-bottom: 10px;
-      border-bottom: 1px solid #eee;
-    }
-    .article-content {
-      line-height: 1.6;
-      color: #333;
-    }
-    .article-content p {
-      margin-bottom: 15px;
-    }
-    .article-content h2 {
-      margin: 25px 0 15px;
-      padding-bottom: 5px;
-      border-bottom: 1px solid #eee;
-    }
-    .article-content h3 {
-      margin: 20px 0 10px;
-    }
-    .article-content a {
-      color: #3366cc;
-      text-decoration: none;
-    }
-    .article-content a:hover {
-      text-decoration: underline;
-    }
-    .article-content ul, .article-content ol {
-      margin-left: 20px;
-      margin-bottom: 15px;
-    }
-    .article-content li {
-      margin-bottom: 5px;
-    }
-    .search-results {
-      background-color: white;
-      padding: 20px;
-      border-radius: 3px;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-      margin-bottom: 20px;
-    }
-    .search-results h2 {
-      margin-bottom: 15px;
-    }
-    .result-item {
-      margin-bottom: 15px;
-      padding-bottom: 15px;
-      border-bottom: 1px solid #eee;
-    }
-    .result-item:last-child {
-      border-bottom: none;
-    }
-    .result-title {
-      font-size: 18px;
-      margin-bottom: 5px;
-    }
-    .result-title a {
-      color: #3366cc;
-      text-decoration: none;
-    }
-    .result-title a:hover {
-      text-decoration: underline;
-    }
-    .result-snippet {
-      font-size: 14px;
-      color: #555;
-    }
-    @media (max-width: 768px) {
-      body { flex-direction: column; }
-      .sidebar {
-        width: 100%;
-        border-right: none;
-        border-bottom: 1px solid #ddd;
-      }
-    }
-  </style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="sidebar">
