--- a/Article_List.html
+++ b/Article_List.html
@@ -25,8 +25,8 @@
       <div class="article">
         <h1 class="article-title">List of Articles</h1>
         <div class="article-content">
-<li><a href"The_arts.html">The arts</a></li>
-<li><a href"Earth.html">Earth</a></li>
+<li><a href"articles/The_arts.html">The arts</a></li>
+<li><a href"articles/Earth.html">Earth</a></li>
 </div>
       </div>
     </div>
