--- a/Article_List.html
+++ b/Article_List.html
@@ -25,8 +25,10 @@
       <div class="article">
         <h1 class="article-title">List of Articles</h1>
         <div class="article-content">
-<a href="articles/The_arts.html"><li>The arts</li></a>
-><a href="articles/Earth.html"><li>Earth</li></a>
+<a href="articles/The_arts.html"><li><b>The arts</b></li></a>
+<a href="articles/Earth.html"><li><b>Earth</b></li></a>
+<a href="articles/Science.html"><li><b>Science</b></li></a>
+
 </div>
       </div>
     </div>
