--- a/index.html
+++ b/index.html
@@ -3,33 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Open Encyclopedia</title>
+    <title>Simple Wiki</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <aside class="sidebar">
-            <h2>Navigation</h2>
+            <h1 class="logo">WIKI</h1>
             <nav>
                 <ul>
-                    <li><a href="all_articles.html">All Articles</a></li>
+                    <li><a href="#" id="all-articles-link">All Articles</a></li>
                     </ul>
             </nav>
         </aside>
 
         <main class="content">
-            <header>
-                <h1>The Open Encyclopedia</h1>
+            <header class="main-header">
                 <div class="search-container">
-                    <input type="text" id="search-box" placeholder="Search articles (min 2 chars)...">
-                    <div id="search-results" class="search-results-box"></div>
+                    <input type="search" id="search-box" placeholder="Search articles (min 2 chars)...">
+                    <div id="search-results" class="search-results"></div>
                 </div>
             </header>
 
-            <article id="article-content">
+            <article id="article-content" class="article-view">
                 <h2>Welcome!</h2>
-                <p>Enter at least two characters in the search box above to find articles, or select one from the <a href="all_articles.html">full list</a>.</p>
+                <p>Select an article from the search or the "All Articles" list.</p>
             </article>
+
+            <section id="all-articles-view" class="all-articles-view" style="display: none;">
+                <h2>All Available Articles</h2>
+                <ul id="all-articles-list">
+                    </ul>
+            </section>
         </main>
     </div>
 
