--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Open Encyclopedia</title>
+    <title>Openpaedia - The Open Encyclopedia</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <aside class="sidebar">
-            <h1 class="logo">The Open Encyclopedia</h1>
+            <h1 class="logo">Openpaedia</h1>
             <nav>
                 <ul>
                     <li><a href="#" id="all-articles-link">All Articles</a></li>
