--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <aside class="sidebar">
-            <h1 class="logo">Openpaedia</h1>
+            <h1 class="logo">WIKI</h1>
             <nav>
                 <ul>
                     <li><a href="#" id="all-articles-link">All Articles</a></li>
